--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "vite --host",
+    "clean": "rm -rf ./dist",
+    "build": "npm run clean && tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.37.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "react": "^18.3.1",
     "react-aria-components": "^1.4.0",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "vite-plugin-svgr": "^4.2.0"
   },
