--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,13 +5,16 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "composite": true,
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "emitDeclarationOnly": true,
+    "noEmit": true,
     "jsx": "react-jsx",
 
     /* Linting */
@@ -19,7 +22,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "composite": true,
 
     /* Aliases with default imports */
     "baseUrl": "./src",
@@ -31,7 +33,7 @@
       "@entities/*": ["./5_entities/*"],
       "@shared/*": ["./6_shared/*"]
     },
-    "types": ["./src/vite-env.d.ts"]
+    "types": ["./src/6_shared/interfaces/vite-env.d.ts"]
   },
-  "include": ["src", "src/**/*.tsx"]
+  "include": ["src"]
 }
