--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tsx-vite-template",
+  "name": "full-fsd-boilerplate",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -7,18 +7,30 @@
     "dev": "vite --host",
     "clean": "rm -rf ./dist",
     "build": "npm run clean && tsc && vite build",
+    "box-component": "node src/6_shared/model/lib/box-component.mjs",
+    "visualize": "rm -rf stats.html && npm run build",
+    "format": "prettier --write .",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "preview": "vite preview"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": false,
+    "trailingComma": "es5",
+    "bracketSpacing": true,
+    "tabWidth": 2,
+    "semi": true
   },
   "dependencies": {
-    "@adobe/react-spectrum": "^3.37.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "class-variance-authority": "^0.7.1",
     "react": "^18.3.1",
-    "react-aria-components": "^1.4.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^3.0.2",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
@@ -28,16 +40,27 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.1",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-fsd-import": "^0.0.13",
+    "eslint-plugin-i18next": "^6.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0",
+    "vite": "^5.4.8",
+    "vite-plugin-compression2": "^1.3.3",
+    "vite-plugin-image-optimizer": "^1.1.8",
+    "vite-plugin-inspect": "^0.8.9"
   }
 }
