feat: added eslint flat config with fsd lint and husky pre-commit hook

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,12 @@
 ./git
 ./vscode
-build
 coverage
 dist
 node_modules
+
+# Ignore all JavaScript-related files:
+**/*.js
+**/*.jsx
+**/*.cjs
+**/*.mjs
+**/*.json
