--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,39 +1,39 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "target": "ES2020",
 
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    "emitDeclarationOnly": true,
     "jsx": "react-jsx",
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "moduleDetection": "force",
+    "useDefineForClassFields": true,
 
     /* Aliases with default imports */
-    "baseUrl": "./src",
+    "baseUrl": "./",
+    "module": "ESNext",
+    /* Bundler mode */
+    "moduleResolution": "bundler",
     "paths": {
-      "@app/*": ["./1_app/*"],
-      "@pages/*": ["./2_pages/*"],
-      "@widgets/*": ["./3_widgets/*"],
-      "@features/*": ["./4_features/*"],
-      "@entities/*": ["./5_entities/*"],
-      "@shared/*": ["./6_shared/*"]
+      "@/*": ["./src/*"],
+      "@app/*": ["./src/1_app/*"],
+      "@pages/*": ["./src/2_pages/*"],
+      "@widgets/*": ["./src/3_widgets/*"],
+      "@features/*": ["./src/4_features/*"],
+      "@entities/*": ["./src/5_entities/*"],
+      "@shared/*": ["./src/6_shared/*"]
     },
-    "types": ["./src/6_shared/model/interfaces/vite-env.d.ts"]
+    "resolveJsonModule": true,
+    "types": ["./src/6_shared/model/interfaces/vite-env.d.ts"],
+    "allowImportingTsExtensions": true,
+    /* Linting */
+    "strict": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "emitDeclarationOnly": true,
+    "isolatedModules": true,
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
