--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
   "name": "full-fsd-boilerplate",
-  "private": true,
-  "version": "1.0.0",
   "type": "module",
+  "version": "1.1.0",
+  "private": true,
   "scripts": {
     "dev": "vite --host",
     "clean": "rm -rf ./dist",
     "build": "npm run clean && tsc && vite build",
     "box-component": "node src/6_shared/model/lib/box-component.mjs",
     "visualize": "rm -rf stats.html && npm run build",
-    "format": "prettier --write .",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preview": "vite preview"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "singleQuote": false,
-    "trailingComma": "es5",
-    "bracketSpacing": true,
-    "tabWidth": 2,
-    "semi": true
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
@@ -30,37 +22,39 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "tailwind-merge": "^3.0.2",
-    "vite-plugin-svgr": "^4.2.0"
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.10.2",
+    "@eslint-react/eslint-plugin": "^1.37.3",
     "@eslint/js": "^9.11.1",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-fsd-import": "^0.0.13",
+    "eslint": "^9.23.0",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-fsd-lint": "^1.0.6",
     "eslint-plugin-i18next": "^6.1.1",
-    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0",
     "vite": "^5.4.8",
     "vite-plugin-compression2": "^1.3.3",
     "vite-plugin-image-optimizer": "^1.1.8",
-    "vite-plugin-inspect": "^0.8.9"
+    "vite-plugin-inspect": "^0.8.9",
+    "vite-plugin-svgr": "^4.3.0"
+  },
+  "lint-staged": {
+    "*": "npm run lint"
   }
 }
