--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
   // Auto fix
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit",
-    "source.addMissingImports": "explicit",
-    "source.organizeImports": "never"
-  },
+  "files.autoSave": "afterDelay",
+  "editor.formatOnSave": false,
+  "eslint.workingDirectories": [{ "mode": "auto" }],
+  "eslint.format.enable": true,
   // Silent the stylistic rules in you IDE, but still auto fix them
   "eslint.rules.customizations": [
     {
@@ -70,25 +69,20 @@
     "toml",
     "xml"
   ],
-  "eslint.workingDirectories": [{ "mode": "auto" }],
-  "eslint.format.enable": true,
-  "pair-diff.patterns": [
-    {
-      "source": "./fixtures/output/**/*.*",
-      "target": "./fixtures/input/<base>"
-    }
-  ],
-  "editor.formatOnSave": false,
 
-  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
   "files.associations": { "*.css": "tailwindcss" },
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+
+  // Setting eslint as default forrmater for js/ts file types
+  "[javascript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
-  "[tailwindcss]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
-  "[markdown]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "[typescript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   }
 }
