--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "full-fsd-boilerplate",
+  "name": "thick-fsd-boilerplate",
   "type": "module",
   "version": "1.1.0",
   "private": true,
@@ -20,9 +20,11 @@
     "class-variance-authority": "^0.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.55.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.10.2",
@@ -35,9 +37,11 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.23.0",
     "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-fsd-lint": "^1.0.6",
+    "eslint-plugin-fsd-lint": "^1.0.7",
     "eslint-plugin-i18next": "^6.1.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "globals": "^15.9.0",
     "husky": "^9.1.7",
